--- a/packages/kogito-jobs-service-webapp/package.json
+++ b/packages/kogito-jobs-service-webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kie-tools/jobs-service-webapp",
+  "name": "@kie-tools/kogito-jobs-service-webapp",
   "version": "0.0.0",
   "description": "",
   "license": "Apache-2.0",
@@ -25,6 +25,8 @@
     "@kie-tools-core/webpack-base": "workspace:*",
     "@kie-tools/root-env": "workspace:*",
     "copy-webpack-plugin": "^11.0.0",
+    "html-replace-webpack-plugin": "^2.6.0",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.2",
