Fix: #3060 - Upgrade CSV catalog to stable channel
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/sonataflow-operator/config/manifests/bases/sonataflow-operator.clusterserviceversion.yaml
+++ b/packages/sonataflow-operator/config/manifests/bases/sonataflow-operator.clusterserviceversion.yaml
@@ -299,7 +299,7 @@ spec:
   maintainers:
     - email: dev@kie.apache.org
       name: Apache KIE
-  maturity: alpha
+  maturity: stable
   minKubeVersion: 1.23.0
   provider:
     name: Apache KIE
