--- a/packages/sonataflow-operator/bundle/metadata/annotations.yaml
+++ b/packages/sonataflow-operator/bundle/metadata/annotations.yaml
@@ -21,8 +21,10 @@ annotations:
   operators.operatorframework.io.bundle.manifests.v1: manifests/
   operators.operatorframework.io.bundle.metadata.v1: metadata/
   operators.operatorframework.io.bundle.package.v1: sonataflow-operator
-  operators.operatorframework.io.bundle.channels.v1: alpha
-  operators.operatorframework.io.metrics.builder: operator-sdk-v1.34.0
+  operators.operatorframework.io.bundle.channels.v1: stable
+  operators.operatorframework.io.bundle.channel.default.v1: stable
+
+  operators.operatorframework.io.metrics.builder: operator-sdk-v1.35.0
   operators.operatorframework.io.metrics.mediatype.v1: metrics+v1
   operators.operatorframework.io.metrics.project_layout: go.kubebuilder.io/v3
   com.redhat.openshift.versions: v4.11
