kie-tools#3280: sonataflow-builder-image: Split builder-runtime module
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/sonataflow-builder-image/resources/incubator-kie-sonataflow-builder-image.yaml
+++ b/packages/sonataflow-builder-image/resources/incubator-kie-sonataflow-builder-image.yaml
@@ -68,6 +68,7 @@
       - name: org.kie.kogito.project.versions
       - name: org.kie.sonataflow.common.scripts
       - name: org.kie.sonataflow.common.quarkus.registry
+      - name: org.kie.sonataflow.builder.packages
       - name: org.kie.sonataflow.builder.runtime
 
   run:
