--- a/packages/sonataflow-builder-image/resources/modules/sonataflow/builder/packages/module.yaml
+++ b/packages/sonataflow-builder-image/resources/modules/sonataflow/builder/packages/module.yaml
@@ -1,4 +1,3 @@
-#!/usr/bin/env bash
 #
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
@@ -17,16 +16,16 @@
 # specific language governing permissions and limitations
 # under the License.
 #
+schema_version: 1
+name: org.kie.sonataflow.builder.packages
+version: "main"
+description: "Apache KIE SonataFlow builder packages module"
 
-set -e
+artifacts:
+  - image: builder
+    path: /home/kogito/build_output/kogito-swf-quarkus-app.tar
+  - image: builder
+    path: /home/kogito/build_output/kogito-swf-maven-repo.tar
 
-SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-ADDED_DIR="${SCRIPT_DIR}"/added
-LAUNCH_DIR="${KOGITO_HOME}"/launch
-
-mkdir -p "${LAUNCH_DIR}"
-
-cp -v "${ADDED_DIR}"/* "${LAUNCH_DIR}"
-
-chown -R 1001:0 "${KOGITO_HOME}"
-chmod -R ug+rwX "${KOGITO_HOME}"
+execute:
+  - script: unpack.sh
