--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "resolutions": {
     "@types/react": "^17.0.6",
     "cross-spawn": "^7.0.6",
+    "d3-color": "3.1.0",
     "react-dropzone": "^11.4.2",
     "superagent": "10.2.2"
   },
