--- a/packages/maven-base/pom.xml
+++ b/packages/maven-base/pom.xml
@@ -138,6 +138,14 @@
     <version.org.mockito>4.11.0</version.org.mockito>
     <version.org.kie.j2cl.tools.yaml.mapper>0.4</version.org.kie.j2cl.tools.yaml.mapper>
     <version.io.netty>4.1.127.Final</version.io.netty>
+
+    <!-- These versions are overrides for transitive dependencies, to fix security vulnerabilities.
+           They need to be checked with Quarkus and Spring Boot upgrades and eventually removed, if they are not needed anymore. -->
+    <version.tomcat.embed.core>10.1.48</version.tomcat.embed.core>
+    <version.apache.commons.lang3>3.18.0</version.apache.commons.lang3>
+    <version.angus.mail>2.0.5</version.angus.mail>
+    <version.nimbus.jose.jwt>9.37.4</version.nimbus.jose.jwt>
+    <!-- End of various transitive overrides. -->
   </properties>
 
   <dependencyManagement>
