Fix cors issue for sonataflow-dev-app and runtime-tools-process-dev-ui-webapp

--- a/packages/sonataflow-deployment-webapp/package.json
+++ b/packages/sonataflow-deployment-webapp/package.json
@@ -18,9 +18,9 @@
     "build:dev": "rimraf dist && webpack --env dev",
     "build:prod": "pnpm lint && pnpm test && rimraf dist && webpack",
     "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\"",
-    "start": "concurrently 'pnpm start:dev-webapp' 'pnpm start:sonataflow-dev-app'",
+    "start": "concurrently --no-colors 'pnpm start:dev-webapp' 'pnpm start:sonataflow-dev-app'",
     "start:dev-webapp": "webpack serve --host 0.0.0.0 --env dev",
-    "start:sonataflow-dev-app": "npm --prefix ./node_modules/@kie-tools/sonataflow-dev-app run start",
+    "start:sonataflow-dev-app": "CORS_DOMAIN=http://localhost:$(build-env sonataFlowDeploymentWebapp.dev.port) npm --prefix ./node_modules/@kie-tools/sonataflow-dev-app run start",
     "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest --silent --verbose --passWithNoTests\""
   },
   "dependencies": {
