--- a/packages/serverless-logic-web-tools/package.json
+++ b/packages/serverless-logic-web-tools/package.json
@@ -21,9 +21,9 @@
     "cy:run": "cypress run --headed -b chrome --project e2e-tests --config baseUrl=$(build-env serverlessLogicWebTools.dev.cypressUrl)",
     "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\"",
     "postreport": "jrm ./dist-tests-e2e/junit-transformed.xml \"./dist-tests-e2e/junit-report*.xml\"",
-    "start": "concurrently 'pnpm start:dev-webapp' 'pnpm start:sonataflow-dev-app'",
+    "start": "concurrently --no-colors 'pnpm start:dev-webapp' 'pnpm start:sonataflow-dev-app'",
     "start:dev-webapp": "webpack serve --host 0.0.0.0 --env dev",
-    "start:sonataflow-dev-app": "npm --prefix ./node_modules/@kie-tools/sonataflow-dev-app run start",
+    "start:sonataflow-dev-app": "CORS_DOMAIN=https://localhost:$(build-env serverlessLogicWebTools.dev.port) npm --prefix ./node_modules/@kie-tools/sonataflow-dev-app run start",
     "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest --silent --verbose --passWithNoTests\"",
     "test-e2e": "run-script-if --ignore-errors \"$(build-env endToEndTests.ignoreFailures)\" --bool \"$(build-env endToEndTests.run)\" --then  \"pnpm rimraf ./dist-tests-e2e\" \"pnpm start-server-and-test start https-get://0.0.0.0:$(build-env serverlessLogicWebTools.dev.port) cy:run\" \"pnpm postreport\""
   },
