--- a/packages/cors-proxy-image/Containerfile
+++ b/packages/cors-proxy-image/Containerfile
@@ -17,14 +17,16 @@
 
 FROM --platform=linux/amd64 registry.access.redhat.com/ubi9/ubi-minimal:9.5
 
+ARG CORS_PROXY_DEFAULT_MODE=development
 ARG CORS_PROXY_DEFAULT_PORT=8080
-ARG CORS_PROXY_DEFAULT_ORIGIN=http://localhost
+ARG CORS_PROXY_DEFAULT_ORIGIN=
 ARG CORS_PROXY_DEFAULT_VERBOSE=false
 
 ENV HOME          /home/kie-sandbox
 ENV NVM_DIR       $HOME/.nvm
 ENV NODE_VERSION  v22.14.0
 
+ENV CORS_PROXY_MODE=$CORS_PROXY_DEFAULT_MODE
 ENV CORS_PROXY_HTTP_PORT=$CORS_PROXY_DEFAULT_PORT
 ENV CORS_PROXY_ORIGIN=$CORS_PROXY_DEFAULT_ORIGIN
 ENV CORS_PROXY_VERBOSE=$CORS_PROXY_DEFAULT_VERBOSE
