implemented Cache for drools-and-kogito dist

--- a/.github/actions/bootstrap/action.yml
+++ b/.github/actions/bootstrap/action.yml
@@ -45,8 +45,29 @@ runs:
         cd ${{ inputs.working_dir }}
         df -h .
 
+    - name: "Calculate drools-and-kogito cache key"
+      id: drools_and_kogito_cache_key
+      env:
+        DROOLS_AND_KOGITO__skip: true
+      shell: bash
+      run: |
+        cd ${{ inputs.working_dir }}
+        pnpm bootstrap -F @kie-tools-core/drools-and-kogito...
+        key=$(node packages/drools-and-kogito/getCICacheKey.js)
+        echo "Drools and Kogito cache key: $key"
+        echo "key=$key" >> "$GITHUB_OUTPUT"
+
+    - name: "Cache drools-and-kogito dist folder"
+      id: drools_and_kogito_cache
+      uses: actions/cache@v4
+      with:
+        path: ${{ inputs.working_dir }}/packages/drools-and-kogito/dist
+        key: ${{ runner.os }}-drools_and_kogito_cache-${{ steps.drools_and_kogito_cache_key.outputs.key }}
+
     - name: "Bootstrap"
       shell: bash
+      env:
+        DROOLS_AND_KOGITO__skip: ${{ steps.drools_and_kogito_cache.outputs.cache-hit }}
       run: |
         echo "STEP: Bootstrap"
         cd ${{ inputs.working_dir }}
