--- a/.github/actions/bootstrap/action.yml
+++ b/.github/actions/bootstrap/action.yml
@@ -57,6 +57,8 @@ runs:
         echo "Drools and Kogito cache $keyOutput"
         echo "$keyOutput" >> "$GITHUB_OUTPUT"
 
+    # Cache 'packages/drools-and-kogito/dist' using the git refs from Drools, OptaPlanner, Kogito Runtimes, and Kogito Apps as a unique key and refresh the cache on changes.
+    # The maven-base profile 'use-maven-repo-local-tail', in packages/maven-base/pom.xml, uses this folder for maven artifacts.
     - name: "Cache drools-and-kogito dist folder"
       if: ${{ steps.drools_and_kogito_cache_key.outputs.key != '' }}
       id: drools_and_kogito_cache
