--- a/packages/cors-proxy-image/Containerfile
+++ b/packages/cors-proxy-image/Containerfile
@@ -21,6 +21,7 @@ ARG CORS_PROXY_DEFAULT_MODE=development
 ARG CORS_PROXY_DEFAULT_PORT=8080
 ARG CORS_PROXY_DEFAULT_ORIGIN=
 ARG CORS_PROXY_DEFAULT_VERBOSE=false
+ARG CORS_PROXY_DEFAULT_ALLOW_HOSTS=localhost,*.github.com
 
 ENV HOME          /home/kie-sandbox
 ENV NVM_DIR       $HOME/.nvm
@@ -30,6 +31,7 @@ ENV CORS_PROXY_MODE=$CORS_PROXY_DEFAULT_MODE
 ENV CORS_PROXY_HTTP_PORT=$CORS_PROXY_DEFAULT_PORT
 ENV CORS_PROXY_ORIGIN=$CORS_PROXY_DEFAULT_ORIGIN
 ENV CORS_PROXY_VERBOSE=$CORS_PROXY_DEFAULT_VERBOSE
+ENV CORS_PROXY_ALLOW_HOSTS=$CORS_PROXY_DEFAULT_ALLOW_HOSTS
 
 RUN mkdir $HOME \
   && chgrp -R 0 $HOME \
