--- a/.github/actions/bootstrap/action.yml
+++ b/.github/actions/bootstrap/action.yml
@@ -55,7 +55,7 @@ runs:
         pnpm bootstrap -F @kie-tools-core/drools-and-kogito...
         keyOutput=$(pnpm run -F @kie-tools-core/drools-and-kogito get-ci-cache-key | grep "^key=")
         echo "Drools and Kogito cache $keyOutput"
-        echo "$keyOutput" >> "$GITHUB_OUTPUT"
+        echo "key=$keyOutput" >> "$GITHUB_OUTPUT"
 
     # Cache 'packages/drools-and-kogito/dist' using the git refs from Drools, OptaPlanner, Kogito Runtimes, and Kogito Apps as a unique key and refresh the cache on changes.
     # The maven-base profile 'use-maven-repo-local-tail', in packages/maven-base/pom.xml, uses this folder for maven artifacts.
