Fix: https://github.com/apache/incubator-kie-tools/pull/3348#discussion_r2538761666 https://github.com/apache/incubator-kie-tools/pull/3348#discussion_r2538768599

--- a/packages/drools-and-kogito/package.json
+++ b/packages/drools-and-kogito/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "keywords": [],
   "scripts": {
-    "get-ci-cache-key": "node getCICacheKey.js",
-    "install": "node install.js"
+    "install": "node install.js",
+    "print-cache-key": "node printCacheKey.js"
   },
   "dependencies": {},
   "devDependencies": {
