--- a/.github/actions/bootstrap/action.yml
+++ b/.github/actions/bootstrap/action.yml
@@ -53,8 +53,8 @@ runs:
       run: |
         cd ${{ inputs.working_dir }}
         pnpm bootstrap -F @kie-tools-core/drools-and-kogito...
-        keyOutput=$(pnpm run -F @kie-tools-core/drools-and-kogito get-ci-cache-key | grep "^key=")
-        echo "Drools and Kogito cache $keyOutput"
+        keyOutput=$(cd packages/drools-and-kogito && pnpm run --silent print-cache-key)
+        echo "Drools and Kogito cache key: $keyOutput"
         echo "key=$keyOutput" >> "$GITHUB_OUTPUT"
 
     # Cache 'packages/drools-and-kogito/dist' using the git refs from Drools, OptaPlanner, Kogito Runtimes, and Kogito Apps as a unique key and refresh the cache on changes.
