kie-tools-3364: [sonataflow-operator] Add the ability to configure the leader lease parameters

--- a/packages/sonataflow-operator/operator.yaml
+++ b/packages/sonataflow-operator/operator.yaml
@@ -28314,6 +28314,11 @@ spec:
             - --health-probe-bind-address=:8081
             - --metrics-bind-address=127.0.0.1:8080
             - --leader-elect
+            - --lease-duration=60s
+            - --renew-deadline=40s
+            - --retry-period=15s
+            - --qps=50
+            - --burst=100
             - --v=0
           command:
             - /usr/local/bin/manager
