kie-tools#3349: [cors-proxy] Implement domains filtering (#3353)

--- a/packages/cors-proxy-image/Containerfile
+++ b/packages/cors-proxy-image/Containerfile
@@ -20,6 +20,7 @@ FROM --platform=linux/amd64 registry.access.redhat.com/ubi9/ubi-minimal:9.5
 ARG CORS_PROXY_DEFAULT_PORT=8080
 ARG CORS_PROXY_DEFAULT_ALLOWED_ORIGINS=
 ARG CORS_PROXY_DEFAULT_VERBOSE=false
+ARG CORS_PROXY_DEFAULT_ALLOW_HOSTS=localhost,*.github.com
 
 ENV HOME          /home/kie-sandbox
 ENV NVM_DIR       $HOME/.nvm
@@ -28,6 +29,7 @@ ENV NODE_VERSION  v22.14.0
 ENV CORS_PROXY_HTTP_PORT=$CORS_PROXY_DEFAULT_PORT
 ENV CORS_PROXY_ALLOWED_ORIGINS=$CORS_PROXY_DEFAULT_ALLOWED_ORIGINS
 ENV CORS_PROXY_VERBOSE=$CORS_PROXY_DEFAULT_VERBOSE
+ENV CORS_PROXY_ALLOW_HOSTS=$CORS_PROXY_DEFAULT_ALLOW_HOSTS
 
 RUN mkdir $HOME \
   && chgrp -R 0 $HOME \
