--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "superagent": "10.2.2"
   },
   "pnpm": {
+    "overrides": {
+      "@apidevtools/json-schema-ref-parser>js-yaml": "^3.14.2",
+      "@istanbuljs/load-nyc-config>js-yaml": "^3.14.2",
+      "json-refs>js-yaml": "^3.14.2",
+      "xmlbuilder2>js-yaml": "^3.14.2"
+    },
     "packageExtensions": {
       "monaco-editor-webpack-plugin": {
         "peerDependencies": {
