--- a/packages/playwright-base/package.json
+++ b/packages/playwright-base/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/apache/incubator-kie-tools/issues"
   },
   "bin": {
-    "playwright-base": "bin.js"
+    "pw-e2e-container": "bin.js"
   },
   "main": "dist/bin.js",
   "files": [
