--- a/packages/playwright-base/package.json
+++ b/packages/playwright-base/package.json
@@ -25,9 +25,9 @@
     "build:dev": "run-script-if --bool \"$(build-env containerImages.build)\" --then \"pnpm image:docker:build\"",
     "build:prod": "pnpm build:dev",
     "image:docker:build": "docker build --platform=linux/amd64 -t dev.local/apache-kie-tools/playwright-e2e-tests-image:$(build-env root.streamName) . -f Containerfile --output type=docker",
-    "install": "pnpm install:cli && pnpm install:image",
+    "install": "pnpm install:cli && pnpm install:deps",
     "install:cli": "rimraf dist && tsc",
-    "install:image": "run-script-if --bool \"$(build-env playwrightBase.installDeps)\" --then \"pnpm playwright install --with-deps\""
+    "install:deps": "run-script-if --bool \"$(build-env playwrightBase.installDeps)\" --then \"pnpm playwright install --with-deps\""
   },
   "dependencies": {
     "yargs": "^17.0.1"
