VS Code extension: Cut/copy/paste keyboard shortcuts not working for text inputs inside DMN/BPMN Editors (#146)

--- a/packages/xyflow-react-kie-diagram/package.json
+++ b/packages/xyflow-react-kie-diagram/package.json
@@ -14,6 +14,7 @@
     "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\""
   },
   "dependencies": {
+    "@kie-tools-core/operating-system": "workspace:*",
     "@kie-tools-core/switch-expression-ts": "workspace:*",
     "d3-drag": "^3.0.0",
     "d3-selection": "^3.0.0",
