--- a/packages/bpmn-editor/package.json
+++ b/packages/bpmn-editor/package.json
@@ -60,6 +60,9 @@
     "@kie-tools/root-env": "workspace:*",
     "@kie-tools/storybook-base": "workspace:*",
     "@kie-tools/tsconfig": "workspace:*",
+    "@patternfly/react-core": "^5.4.1",
+    "@patternfly/react-icons": "^5.4.1",
+    "@patternfly/react-styles": "^5.4.0",
     "@playwright/test": "^1.45.2",
     "@storybook/addon-links": "^7.3.2",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
@@ -71,7 +74,7 @@
     "@types/d3-drag": "^3.0.3",
     "@types/d3-selection": "^3.0.6",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.14.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/uuid": "^8.3.0",
@@ -93,9 +96,6 @@
     "webpack-merge": "^5.9.0"
   },
   "peerDependencies": {
-    "@patternfly/react-core": "^5.4.1",
-    "@patternfly/react-icons": "^5.4.1",
-    "@patternfly/react-styles": "^5.4.1",
-    "react": "^17.0.2"
+    "react": ">=17.0.2 <19.0.0"
   }
 }
