--- a/packages/scesim-editor/package.json
+++ b/packages/scesim-editor/package.json
@@ -50,8 +50,6 @@
     "@patternfly/react-styles": "^5.4.0",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-table": "^7.6.2",
     "uuid": "^8.3.2",
     "zustand": "^4.4.2"
@@ -94,5 +92,9 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
+  },
+  "peerDependencies": {
+    "react": ">=17.0.2 <19.0.0",
+    "react-dom": ">=17.0.2 <19.0.0"
   }
 }
