--- a/packages/bpmn-editor/package.json
+++ b/packages/bpmn-editor/package.json
@@ -18,7 +18,7 @@
     "start:win32": "pnpm powershell \"cross-env STORYBOOK_PORT=$(build-env bpmnEditor.storybook.port) pnpm kie-tools--storybook --storybookArgs='dev --no-open'",
     "test-e2e": "run-script-if --ignore-errors \"$(build-env endToEndTests.ignoreFailures)\" --bool \"$(build-env endToEndTests.run)\" --then \"pnpm rimraf ./dist-tests-e2e\" \"pnpm test-e2e:run\"",
     "test-e2e:open": "pnpm exec playwright show-report dist-tests-e2e/reports",
-    "test-e2e:run": "pnpm exec playwright test"
+    "test-e2e:run": "pnpm exec playwright test --pass-with-no-tests"
   },
   "dependencies": {
     "@kie-tools-core/i18n": "workspace:*",
