--- a/scripts/run-script-if/package.json
+++ b/scripts/run-script-if/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "name": "@kie-tools-scripts/run-script-if",
   "version": "0.0.0",
   "description": "",
@@ -22,17 +21,17 @@
     "src"
   ],
   "scripts": {
-    "install": "rimraf dist && tsc && pnpm write-readme",
+    "install": "echo 'RIMRAF RUN SCRIPT IF' && rimraf dist && tsc && pnpm write-readme",
     "write-readme": "run-script-os",
     "write-readme:darwin:linux": "LC_ALL=en echo '```' > README.md && ./bin.js --help >> README.md && echo '```' >> README.md",
     "write-readme:win32": "echo 'Nothing to do.'"
   },
   "dependencies": {
-    "yargs": "^17.0.1"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@kie-tools/tsconfig": "workspace:*",
-    "@types/yargs": "^17.0.1",
+    "@types/yargs": "^17.0.35",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
     "typescript": "^5.5.3"
