--- a/scripts/run-script-if/package.json
+++ b/scripts/run-script-if/package.json
@@ -21,7 +21,7 @@
     "src"
   ],
   "scripts": {
-    "install": "echo 'RIMRAF RUN SCRIPT IF' && rimraf dist && tsc && pnpm write-readme",
+    "install": "rimraf dist && tsc && pnpm write-readme",
     "write-readme": "run-script-os",
     "write-readme:darwin:linux": "LC_ALL=en echo '```' > README.md && ./bin.js --help >> README.md && echo '```' >> README.md",
     "write-readme:win32": "echo 'Nothing to do.'"
