--- a/examples/uniforms-patternfly/package.json
+++ b/examples/uniforms-patternfly/package.json
@@ -14,12 +14,13 @@
     "@kie-tools/uniforms-patternfly": "workspace:*",
     "@patternfly/react-core": "^5.4.1",
     "@patternfly/react-icons": "^5.4.1",
+    "@types/simpl-schema": "1.12.9",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "ajv-formats": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "simpl-schema": "^3.4.6",
+    "simpl-schema": "^1.12.3",
     "uniforms": "^3.10.2",
     "uniforms-bridge-json-schema": "^3.10.2",
     "uniforms-bridge-simple-schema": "^3.10.2",
