--- a/packages/form-code-generator-bootstrap4-theme/package.json
+++ b/packages/form-code-generator-bootstrap4-theme/package.json
@@ -46,6 +46,7 @@
     "@types/prettier": "^2.7.3",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/simpl-schema": "1.12.9",
     "@types/underscore": "^1.11.2",
     "copy-webpack-plugin": "^11.0.0",
     "jest": "^29.7.0",
@@ -54,7 +55,7 @@
     "jest-when": "^3.6.0",
     "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
-    "simpl-schema": "^3.4.6",
+    "simpl-schema": "^1.12.3",
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.3",
     "uniforms-bridge-simple-schema-2": "^3.10.2",
