--- a/packages/uniforms-patternfly/package.json
+++ b/packages/uniforms-patternfly/package.json
@@ -48,12 +48,13 @@
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/simpl-schema": "1.12.9",
     "copy-webpack-plugin": "^11.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "rimraf": "^3.0.2",
-    "simpl-schema": "^3.4.6",
+    "simpl-schema": "^1.12.3",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
