Rename form and form-dmn

--- a/packages/online-editor/package.json
+++ b/packages/online-editor/package.json
@@ -53,13 +53,13 @@
     "@kie-tools/dmn-language-service": "workspace:*",
     "@kie-tools/dmn-marshaller": "workspace:*",
     "@kie-tools/dmn-runner": "workspace:*",
+    "@kie-tools/dmn-uniforms-patternfly-form-wrapper": "workspace:*",
     "@kie-tools/emscripten-fs": "^0.0.2",
     "@kie-tools/extended-services-api": "workspace:*",
-    "@kie-tools/form": "workspace:*",
-    "@kie-tools/form-dmn": "workspace:*",
     "@kie-tools/i18n-common-dictionary": "workspace:*",
     "@kie-tools/kie-bc-editors": "workspace:*",
     "@kie-tools/pmml-editor": "workspace:*",
+    "@kie-tools/uniforms-patternfly-form-wrapper": "workspace:*",
     "@kie-tools/unitables": "workspace:*",
     "@kie-tools/unitables-dmn": "workspace:*",
     "@octokit/plugin-rest-endpoint-methods": "^5.0.1",
