--- a/packages/uniforms-patternfly-form-wrapper/package.json
+++ b/packages/uniforms-patternfly-form-wrapper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kie-tools/form-dmn",
+  "name": "@kie-tools/uniforms-patternfly-form-wrapper",
   "version": "0.0.0",
   "description": "",
   "license": "Apache-2.0",
@@ -18,22 +18,23 @@
     "dist"
   ],
   "scripts": {
-    "build:dev": "rimraf dist && pnpm copy:css && tsc -p tsconfig.json",
-    "build:prod": "pnpm lint && rimraf dist && pnpm copy:css && tsc -p tsconfig.json && pnpm test",
-    "copy:css": "copyfiles -u 1 \"src/**/*.{sass,scss,css}\" dist/",
+    "build:dev": "rimraf dist && tsc -p tsconfig.json",
+    "build:prod": "pnpm lint && rimraf dist && tsc -p tsconfig.json && pnpm test",
     "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\"",
-    "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest  --verbose --passWithNoTests\""
+    "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest --silent --verbose --passWithNoTests\""
   },
   "dependencies": {
     "@kie-tools-core/i18n": "workspace:*",
     "@kie-tools-core/notifications": "workspace:*",
     "@kie-tools/dmn-runner": "workspace:*",
-    "@kie-tools/extended-services-api": "workspace:*",
-    "@kie-tools/form": "workspace:*",
     "@kie-tools/i18n-common-dictionary": "workspace:*",
     "@kie-tools/uniforms-patternfly": "workspace:*",
     "@patternfly/react-core": "^5.4.1",
     "@patternfly/react-icons": "^5.4.1",
+    "ajv": "^8.17.1",
+    "ajv-draft-04": "^1.0.0",
+    "ajv-errors": "^1.0.1",
+    "ajv-formats": "^3.0.1",
     "deep-object-diff": "^1.1.9",
     "lodash": "^4.17.23",
     "uniforms": "^3.10.2",
@@ -49,14 +50,11 @@
     "@kie-tools/root-env": "workspace:*",
     "@kie-tools/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.12",
     "@types/jest-when": "^3.5.5",
-    "@types/json-schema": "^7.0.11",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
-    "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
