--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,3 +15,4 @@ overrides:
   "react-dropzone": "^11.4.2"
   "superagent": "10.2.2"
   "xmlbuilder2>js-yaml": "^3.14.2"
+  "@types/node": "24.10.11"
