incubator-kie-tools-3432: [sonataflow-operator] Implement nativelly HPA support for SonataFlow workflows and Data Index service deployments

--- a/packages/sonataflow-operator/config/rbac/role.yaml
+++ b/packages/sonataflow-operator/config/rbac/role.yaml
@@ -22,6 +22,14 @@ metadata:
   name: manager-role
 rules:
   - apiGroups:
+      - autoscaling
+    resources:
+      - horizontalpodautoscalers
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
       - batch
     resources:
       - jobs
@@ -82,6 +90,7 @@ rules:
       - sonataflowbuilds/status
       - sonataflowclusterplatforms/status
       - sonataflowplatforms/status
+      - sonataflows/scale
       - sonataflows/status
     verbs:
       - get
