--- a/packages/uniforms-patternfly-form-wrapper/package.json
+++ b/packages/uniforms-patternfly-form-wrapper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kie-tools/form",
+  "name": "@kie-tools/uniforms-patternfly-form-wrapper",
   "version": "0.0.0",
   "description": "",
   "license": "Apache-2.0",
