--- a/packages/sonataflow-operator/test/e2e/testdata/workflows/greetings/01-sonataflow.org_v1alpha08_sonataflow_hpa.yaml
+++ b/packages/sonataflow-operator/test/e2e/testdata/workflows/greetings/01-sonataflow.org_v1alpha08_sonataflow_hpa.yaml
@@ -15,33 +15,27 @@
 # specific language governing permissions and limitations
 # under the License.
 
-apiVersion: sonataflow.org/v1alpha08
-kind: SonataFlow
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
 metadata:
-  name: greetings
-  annotations:
-    sonataflow.org/description: Greetings example on k8s!
-    sonataflow.org/version: 0.0.1
-    sonataflow.org/profile: gitops
-  labels:
-    test: test
+  name: greetings-hpa
 spec:
-  podTemplate:
-    replicas: 0
-    container:
-      image: replaceme
-      resources:
-        limits:
-          cpu: 500m
-          memory: 512Mi
-        requests:
-          cpu: 250m
-          memory: 256Mi
-  flow:
-    start: HelloWorld
-    states:
-      - name: HelloWorld
-        type: inject
-        data:
-          message: Hello World
-        end: true
+  scaleTargetRef:
+    apiVersion: sonataflow.org/v1alpha08
+    kind: SonataFlow
+    name: greetings
+  minReplicas: 3
+  maxReplicas: 4
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 70
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 80
