--- a/packages/kie-sandbox-accelerator-quarkus/package.json
+++ b/packages/kie-sandbox-accelerator-quarkus/package.json
@@ -23,23 +23,22 @@
     "build:dev": "pnpm run _build",
     "build:prod": "pnpm run _build && pnpm run test",
     "install": "node install.js",
-    "start": "node dev-server/server.mjs $(build-env kieSandboxAcceleratorQuarkus.dev.port) ./dist-dev",
+    "start": "kie-tools--accelerator-git-http-server $(build-env kieSandboxAcceleratorQuarkus.dev.port) ./dist-dev kie-sandbox-accelerator-quarkus",
     "test": "run-script-os",
     "test:darwin:linux": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"rimraf ./dist-tests\" \"cp -r ./dist ./dist-tests\" \"cp ./tests/models/empty.bpmn ./dist-tests/git-repo-content/src/main/resources\" \"mvn -f ./dist-tests/git-repo-content clean package\" --finally \"rimraf ./dist-tests\"",
     "test:win32": "echo Testing not supported on Windows."
   },
   "dependencies": {
+    "@kie-tools/accelerator-git-http-server": "workspace:*",
     "@kie-tools/jbpm-quarkus-devui": "workspace:*"
   },
   "devDependencies": {
     "@kie-tools/maven-base": "workspace:*",
     "@kie-tools/root-env": "workspace:*",
     "cpy-cli": "^5.0.0",
-    "finalhandler": "^1.3.1",
     "http-server": "^14.1.1",
     "mkdirp": "^3.0.1",
     "rimraf": "^3.0.2",
-    "run-script-os": "^1.1.6",
-    "serve-static": "^1.16.2"
+    "run-script-os": "^1.1.6"
   }
 }
